--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -155,6 +155,7 @@ En esta sección de resultados, presentaremos los hallazgos obtenidos en el \tex
     \item Dendrograma de los clústeres obtenidos según los pacientes que han experimentado OAF, junto con la tabla de contingencia.
     \item Clasificación mediante Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final}, así como la Importancia de las cinco primeras variables.
     \item Clasificación Discriminante mediante Random Forest de los clústeres en función de los datos utilizados para generar los mismos clústeres (Raw Data, FAC, Peridiograma y FACC). Se mostrará la importancia para identificar qué datos contribuyen más en la clasificación entre los clústeres obtenidos.
+    \item Distribución de la importancia del resultado del modelo del apartado anterior de los valores empleados (Raw Data, FAC, Peridiograma y FACC) 
     \item Cálculo de las medias de todos los valores empleados (Raw Data, FAC, Peridiograma y FACC) entre todos los pacientes, y diagrama de sus valores por clústeres.
 \end{enumerate}
 
@@ -168,226 +169,15 @@ En esta sección de resultados, presentaremos los hallazgos obtenidos en el \tex
     \item \textbf{Frecuencia Cardíaca Transformada por Cuantiles}: \textit{HR\_quantile}.
 \end{enumerate}
 
+\newpage
+\include{lib/chapter5-Raw-data.tex}
 
-\subsubsection{Raw Data}
+\newpage
+\include{lib/chapter5-FAC.tex}
 
-\paragraph{Dendrograma de los clústeres obtenidos}
+\newpage
+\include{lib/chapter5-Peridiograma.tex}
 
-\begin{figure}[H]
-    \centering
-    
-    \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-1-eucl.png}}
-    \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-1-eucl.png}}
-    \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-1-eucl.png}}
-    \caption{Dendogramas de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
-    \label{fig:raw_data_den_fc}
-\end{figure}
+\newpage
+\include{lib/chapter5-FACC.tex}
 
-\begin{figure}[ht]
-    \centering
-    \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-1-eucl.png}}\hfill
-    \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-1-eucl.png}}
-    \caption{Dendogramas de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:raw_data_den_spo2}
-\end{figure}
-
-\paragraph{Distribución de los clústeres obtenidos en función de las dos primeras componentes principales}
-
-\begin{figure}[H]
-    \centering
-    \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-2-eucl.png}}
-    \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-2-eucl.png}}
-    \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-2-eucl.png}}
-    \caption{Cluster Plot de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
-    \label{fig:raw_data_pc_fc}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-2-eucl.png}}\hfill
-    \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-2-eucl.png}}
-    \caption{Cluster Plot de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:raw_data_pc_spo2}
-\end{figure}
-
-
-\paragraph{Puntuación de Silhouette de los clústeres obtenidos}
-
-\begin{figure}[H]
-    \centering
-    \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-3-eucl.png}
-    \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-3-eucl.png}}
-    \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-3-eucl.png}}
-    \caption{Silhouette Plot de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:raw_data_si_fc}
-\end{figure}
-
-\begin{figure}[ht]
-    \centering
-    \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-3-eucl.png}}\hfill
-    \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-3-eucl.png}}
-    \caption{Silhouette Plot de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:raw_data_si_spo2}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-\begin{verbatim}
-    randomForest(formula = CLUSTER ~ ., data = newSMOTE_EUCL) 
-    Type of random forest: classification
-          Number of trees: 500
-No. of variables tried at each split: 5
-
-OOB estimate of  error rate: 39.66%
-Confusion matrix:
-1  2 class.error
-1 19 12   0.3870968
-2 11 16   0.4074074
-    \end{verbatim}
-    \caption{Random Forest output de \textit{HR} con variables descriptivas en función de los clusters}\label{fig:raw_data_rf_fc_1}
-\end{figure}
-    
-
-\begin{figure}[H]
-    \centering
-\begin{verbatim}
-    randomForest(formula = CLUSTER ~ ., data = data_frame_merge_EUCL) 
-    Type of random forest: classification
-          Number of trees: 500
-No. of variables tried at each split: 21
-
-OOB estimate of  error rate: 6.9%
-Confusion matrix:
-1  2 class.error
-1 29  2  0.06451613
-2  2 25  0.07407407
-    \end{verbatim}
-    \caption{Random Forest output de \textit{HR} con Raw Data en función de los clusters}\label{fig:raw_data_rf_fc_2}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \begin{lstlisting}[frame=single, basicstyle=\small\ttfamily]
-randomForest(formula = CLUSTER ~ ., data = data_frame_merge_EUCL)
-Type of random forest: classification
-Number of trees: 500
-No. of variables tried at each split: 21
-
-OOB estimate of error rate: 6.0%
-Confusion matrix:
-  1  2 class.error
-1 29  2  0.06451613
-2  2 25  0.07407407
-    \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{HR} utilizando Raw Data y clasificación de clusters}\label{fig:random_forest_result_1}
-\end{figure}
-
-\begin{figure}[H]
-    \centering
-    \begin{lstlisting}[basicstyle=\small\ttfamily]
-randomForest(formula = CLUSTER ~ ., data = data_frame_merge_EUCL)
-Type of random forest: classification
-Number of trees: 500
-No. of variables tried at each split: 21
-
-OOB estimate of error rate: 6.9%
-Confusion matrix:
-  1  2 class.error
-1 29  2  0.0645
-2  2 25  0.0741
-    \end{lstlisting}
-    \caption{Random Forest Results for \textit{HR} using Raw Data and Cluster Classification}\label{fig:rf-results_2}
-\end{figure}
-
-
-
-
-\begin{tabular}{|l|r|}
-    \hline
-    Variable & Mean Decrease Accuracy \\
-    \hline
-    PESO & 3.4318174 \\
-    SCORE\_WOOD\_DOWNES\_INGRESO & 3.3955906 \\
-    EDAD & 3.2490817 \\
-    SCORE\_CRUCES\_INGRESO & 2.5964057 \\
-    FR\_0\_8h & 1.9810445 \\
-    \hline
-\end{tabular}
-    
-    
-    
-
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|}
-        \hline
-               & CLUST1 & CLUST2 \\
-        \hline
-        DETERIORO & 5 & 1 \\
-        NO DETERIORO & 26 & 26 \\
-        \hline
-    \end{tabular}
-    \caption{Primera tabla contingencia}
-    \label{tab:raw_data_contingencia}
-    \end{table}
-    
-    \begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|}
-        \hline
-               & CLUST1 & CLUST2 \\
-        \hline
-        DETERIORO & 5 & 1 \\
-        NO DETERIORO & 26 & 26 \\
-        \hline
-    \end{tabular}
-    \caption{Segunda tabla contingencia}
-    \label{tab:raw_data_contingencia2}
-    \end{table}
-    
-    \begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|}
-        \hline
-               & CLUST1 & CLUST2 \\
-        \hline
-        DETERIORO & 5 & 1 \\
-        NO DETERIORO & 26 & 26 \\
-        \hline
-    \end{tabular}
-    \caption{Tercera tabla contingencia}
-    \label{tab:raw_data_contingencia3}
-    \end{table}
-    
-    \begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|}
-        \hline
-               & CLUST1 & CLUST2 \\
-        \hline
-        DETERIORO & 5 & 1 \\
-        NO DETERIORO & 26 & 26 \\
-        \hline
-    \end{tabular}
-    \caption{Cuarta tabla contingencia}
-    \label{tab:raw_data_contingencia4}
-    \end{table}
-    
-    \begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|}
-        \hline
-               & CLUST1 & CLUST2 \\
-        \hline
-        DETERIORO & 5 & 1 \\
-        NO DETERIORO & 26 & 26 \\
-        \hline
-    \end{tabular}
-    \caption{Quinta tabla contingencia}
-    \label{tab:raw_data_contingencia5}
-    \end{table}
-    
-    
-
-
-\subsubsection{FAC}
-
-\subsubsection{Periodograma}
-
-\subsubsection{FACC}
